misc non-fonctionnal modifications      added comments, annotations, made some code clearer